--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,6 +4,6 @@ on: [push]
 
 jobs:
   org-runner-test:
-    runs-on: [self-hosted, org]
+    runs-on: ubuntu-latest
     steps:
       - run: echo "✅ Running on organization-level self-hosted runner!"
